--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -916,12 +916,25 @@ StScrollBar {
     border-color: transparent; }
   .calendar-day-base.calendar-day-heading {
     font-size: 9pt;
-    margin-top: 1em;
+    width: 32px;
+    height: 25.3px;
+    margin-top: 2px;
+    padding: 6.7px 0 0;
+    background-color: transparent;
+    color: rgba(236, 239, 241, 0.4);
     font-weight: 700;
-    color: rgba(236, 239, 241, 0.4); }
-  .calendar-day-base.calendar-week-number {
-    font-weight: 700;
-    color: rgba(236, 239, 241, 0.4); }
+    text-align: center; }
+
+.calendar-week-number {
+  width: 32px;
+  height: 25.3px;
+  margin: 2px;
+  padding: 6.7px 0 0;
+  background-color: transparent;
+  color: rgba(236, 239, 241, 0.4);
+  font-weight: 700;
+  font-size: inherit;
+  text-align: center; }
 
 .calendar-day {
   border-width: 0; }
